testing the linking to repository-files ...

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
     <div class="wrapper">
       <header>
@@ -30,6 +28,10 @@
 
 <h2>Project Pages</h2>
 <p>Pretty amazing, that github.com now provides hosting for pages, also. Thx dudes!</p>
+<p>The pages are kept in a differnt branch, than the project-files. For example,
+there is a <a href="https://github.com/improti/myowntest/blob/master/test.py">test.py</a> in this project.</p>
+
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/improti">improti</a></p>
