first test-conclusions ;)

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
 
 <h2>Project Pages</h2>
 <p>Pretty amazing, that github.com now provides hosting for pages, also. Thx dudes!</p>
-<p>The pages are kept in a differnt branch, than the project-files. For example,
-there is a <a href="https://github.com/improti/myowntest/blob/master/test.py">test.py</a> in this project.</p>
-
+<p>The pages are kept in a differnt branch than the project-files. For example,
+there is a <a href="https://github.com/improti/myowntest/blob/master/test.py">test.py</a> 
+in this project. However, I could not link to it by ./test.py, as it it non-existent
+in the branch the pages are kept in (<a href="https://github.com/improti/myowntest/tree/gh-pages">gh-pages</a>). 
+Instead I need to link to the full URL. Also, if you download "this project" by using 
+the links provided on the left, then you will not get these pages.</p>
+<p>This is something I will have to deal with somehow ...</p>
 
       </section>
       <footer>
